correccion con clean code